--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ org.gradle.parallel=true
 	loader_version=0.14.19
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	mod_version = 1.2.0
+	maven_group = dl909.dl_ct
+	archives_base_name = dl909_creative_tool
 
 # Dependencies
 	fabric_version=0.79.0+1.19.4
